# garagebeam

./: Cargo.toml  Cross.toml  README.md  ble.py  boot.py  deploy.sh  garage_beam.openrc  main.py  micropython_ota.py  rust-toolchain.toml
src/: ble.rs  gpio.rs  lib.rs  main.rs
