[package]
name = "garage_beam"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
uuid = "1.0"
libdbus-sys = { version = "0.2", features = ["vendored"] }

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
